# ResearchPilot

./: .gitignore  DEPLOYMENT.md  Dockerfile  README.md  SECURITY.md  demo_blueprint.md  deploy.sh  pyproject.toml
.agents/skills/research-indexer/: SKILL.md
.agents/skills/research-indexer/scripts/: build_index.py  query_index.py
.streamlit/: config.toml
app/: agents.json  main.py  orchestrator.py  web_ui.py
app/agents/: base_agent.py  index_agent.py  report_agent.py  research_agent.py
app/tools/: pptx_generator.py  sanitizer.py  vector_store.py
githooks/: pre-commit
mcp_server/: server.py
tests/: test_orchestrator.py  test_vector_store.py
