[project]
name = "research-pilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.14.3",
    "google-genai>=2.10.0",
    "mcp>=1.28.1",
    "nest-asyncio>=1.6.0",
    "numpy>=2.5.0",
    "python-dotenv>=1.2.2",
    "python-pptx>=1.0.2",
    "streamlit>=1.58.0",
]
